--- a/catr/Cargo.toml
+++ b/catr/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = "4.5.23"
+
+[dev-dependencies]
+anyhow = "1.0.95"
+assert_cmd = "2.0.16"
+predicates = "3.1.3"
+pretty_assertions = "1.4.1"
+rand = "0.8.5"
