--- a/headr/Cargo.toml
+++ b/headr/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
+regex = "1.11.1"
+thiserror = "2.0.11"
 
 [dev-dependencies]
 anyhow = "1.0.95"
